--- a/package.json
+++ b/package.json
@@ -16,29 +16,30 @@
         "@emotion/styled": "^11.10.6",
         "@floating-ui/react": "^0.20.1",
         "@icon-park/react": "^1.4.2",
+        "@material/material-color-utilities": "^0.3.0",
         "@react-spring/web": "^9.7.1",
         "ahooks": "^3.7.6",
         "lodash": "^4.17.21",
         "query-string": "^8.1.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-draggable": "^4.4.5",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
+        "react-draggable": "^4.5.0",
         "react-error-boundary": "^3.1.4",
-        "react-rnd": "^10.4.1",
+        "react-rnd": "^10.5.2",
         "simplebar-react": "^3.2.3",
         "valtio": "^1.10.3"
     },
     "devDependencies": {
         "@types/chrome": "^0.0.222",
         "@types/lodash": "^4.14.192",
-        "@types/node": "^18.15.11",
-        "@types/react": "^18.0.31",
-        "@types/react-dom": "^18.0.11",
-        "@vitejs/plugin-react": "^3.1.0",
+        "@types/node": "^25.0.3",
+        "@types/react": "^19.2.7",
+        "@types/react-dom": "^19.2.3",
+        "@vitejs/plugin-react": "^5.1.2",
         "dotenv": "^16.0.3",
         "rollup-plugin-visualizer": "^5.9.0",
-        "typescript": "^4.9.5",
-        "vite": "^4.2.1",
-        "vite-plugin-monkey": "^2.12.1"
+        "typescript": "^5.9.3",
+        "vite": "^7.3.0",
+        "vite-plugin-monkey": "^7.1.8"
     }
 }
