--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,73 +1,7 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ESNext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "isolatedModules": false,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "experimentalDecorators": true,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
-    ],
-    "baseUrl": "./",
-    "paths": {
-      "@/*": [
-        "./*"
-      ],
-      "@src/*": [
-        "src/*"
-      ],
-      "@api": [
-        "src/api"
-      ],
-      "@api/*": [
-        "src/api/*"
-      ],
-      "@components/*": [
-        "src/views/components/*"
-      ],
-      "@views/*": [
-        "src/views/*"
-      ],
-      "@store": [
-        "src/store"
-      ],
-      "@store/*": [
-        "src/store/*"
-      ],
-      "@utils": [
-        "src/utils"
-      ],
-      "@utils/*": [
-        "src/utils/*"
-      ],
-      "@static/*": [
-        "src/static/*"
-      ]
-    }
-  },
-  "include": [
-    "src",
-    "metadata"
-  ],
+  "files": [],
   "references": [
-    {
-      "path": "./tsconfig.node.json"
-    }
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
   ]
 }
