refactor: Phase 3 deep optimization
- Add barrel exports (core, shared/components, layouts)
- Optimize path aliases in tsconfig.app.json
  - Add @core, @features, @shared, @layouts aliases
  - Update @store and @api to point to core/
  - Update @assets (was @static)
- Remove redundant src/store and src/api directories
- Simplify import management with centralized exports

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -39,16 +39,21 @@
     "paths": {
       "@/*": ["./*"],
       "@src/*": ["src/*"],
-      "@api": ["src/api"],
-      "@api/*": ["src/api/*"],
-      "@components/*": ["src/views/components/*"],
+      "@core": ["src/core"],
+      "@core/*": ["src/core/*"],
+      "@features/*": ["src/features/*"],
+      "@shared/*": ["src/shared/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@api": ["src/core/api"],
+      "@api/*": ["src/core/api/*"],
+      "@components/*": ["src/shared/components/*"],
       "@views/*": ["src/views/*"],
-      "@store": ["src/store"],
-      "@store/*": ["src/store/*"],
+      "@store": ["src/core/store"],
+      "@store/*": ["src/core/store/*"],
       "@utils": ["src/utils"],
       "@utils/*": ["src/utils/*"],
       "@styles/*": ["src/styles/*"],
-      "@static/*": ["src/static/*"]
+      "@assets/*": ["src/assets/*"]
     }
   },
   "include": ["src"]
