chore: 更新相关配置

--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
     "name": "welearn_helper",
-    "version": "1.1.0",
+    "version": "2.0.0",
     "author": "l-1124",
     "license": "GPL-3.0",
     "private": true,
     "type": "module",
     "scripts": {
         "dev": "vite --config ./build/vite.userscript.ts",
-        "build:js": "tsc && vite build --config ./build/vite.userscript.ts",
-        "build:crx": "tsc && vite build --config ./build/vite.extension.index.ts --emptyOutDir && vite build --config ./build/vite.extension.inject.ts && vite build --config ./build/vite.extension.content.ts && vite build --config ./build/vite.extension.background.ts",
+        "build": "tsc && vite build --config ./build/vite.userscript.ts",
         "preview": "vite preview"
     },
     "dependencies": {
