--- a/.hintrc
+++ b/.hintrc
@@ -1,14 +1,25 @@
 {
-  "extends": [
-    "development"
-  ],
-  "hints": {
-    "no-inline-styles": "off",
-    "axe/forms": [
-      "default",
-      {
-        "label": "off"
-      }
-    ]
-  }
+    "extends": [
+        "development"
+    ],
+    "connector": {
+        "name": "local",
+        "options": {
+            "defaultProfile": "experimental",
+            "watch": false
+        }
+    },
+    "formatters": [
+        "summary"
+    ],
+    "hints": {
+        "no-inline-styles": "off",
+        "typescript-config/is-valid": "error",
+        "axe/forms": [
+            "default",
+            {
+                "label": "off"
+            }
+        ]
+    }
 }
