--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "@emotion/styled": "^11.10.6",
         "@floating-ui/react": "^0.20.1",
         "@icon-park/react": "^1.4.2",
-        "@react-spring/web": "^9.7.1",
+        "@react-spring/web": "10.0.3",
         "ahooks": "^3.7.6",
         "lodash": "^4.17.21",
         "query-string": "^8.1.0",
@@ -34,8 +34,11 @@
         "@types/react": "^19.2.7",
         "@types/react-dom": "^19.2.3",
         "@vitejs/plugin-react": "^5.1.2",
+        "autoprefixer": "^10.4.17",
         "dotenv": "^16.0.3",
         "rollup-plugin-visualizer": "^5.9.0",
+        "tailwindcss": "^3.4.17",
+        "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.9.3",
         "vite": "^7.3.0",
         "vite-plugin-monkey": "^7.1.8"
