--- a/package.json
+++ b/package.json
@@ -17,13 +17,9 @@
         "@icon-park/react": "^1.4.2",
         "@react-spring/web": "10.0.3",
         "ahooks": "^3.9.6",
-        "lodash": "^4.17.21",
         "query-string": "^9.3.1",
-        "react": "^19.2.3",
-        "react-dom": "^19.2.3",
         "react-draggable": "^4.5.0",
         "react-error-boundary": "^3.1.4",
-        "react-rnd": "^10.5.2",
         "simplebar-react": "^3.2.3",
         "valtio": "^2.2.0"
     },
@@ -31,14 +27,18 @@
         "@types/chrome": "^0.0.222",
         "@types/lodash": "^4.14.192",
         "@types/node": "^25.0.3",
-        "@types/react": "^19.2.7",
-        "@types/react-dom": "^19.2.3",
+        "@types/react": "^18.2.7",
+        "@types/react-dom": "^18.2.0",
         "@vitejs/plugin-react": "^5.1.2",
         "autoprefixer": "^10.4.17",
         "dotenv": "^16.0.3",
+        "lodash": "^4.17.21",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "rollup-plugin-visualizer": "^5.9.0",
         "tailwindcss": "^3.4.17",
         "tailwindcss-animate": "^1.0.7",
+        "terser": "^5.44.1",
         "typescript": "^5.9.3",
         "vite": "^7.3.0",
         "vite-plugin-monkey": "^7.1.8"
